--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@chakra-ui/react": "^1.6.5",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@hookform/resolvers": "^2.6.1",
     "@types/axios": "^0.14.0",
     "axios": "^0.21.1",
     "framer-motion": "^4.1.17",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "typescript": "^4.4.0-dev.20210711"
+    "react-hook-form": "^7.12.0",
+    "typescript": "^4.4.0-dev.20210711",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/node": "^16.3.1",
